--- a/languages/en.lang
+++ b/languages/en.lang
@@ -94,7 +94,7 @@ handlerEvents.threadBanned=𝙎𝙤𝙧𝙧𝙮 𝙘𝙪𝙧𝙧𝙚𝙣𝙩𝙡
 handlerEvents.onlyAdminBox=𝘾𝙪𝙧𝙧𝙚𝙣𝙩𝙡𝙮, 𝙤𝙣𝙡𝙮 𝙩𝙝𝙚 𝙜𝙧𝙤𝙪𝙥 𝙖𝙙𝙢𝙞𝙣𝙨 𝙘𝙖𝙣 𝙪𝙨𝙚 𝙩𝙝𝙚 𝙗𝙤𝙩.
 handlerEvents.onlyAdminBot=(⋋▂⋌)𝗔𝗖𝗖𝗘𝗦𝗦 𝗗𝗘𝗡𝗜𝗘𝗗 𝖮𝗇𝗅𝗒 𝖻𝗈𝗍 𝖺𝖽𝗆𝗂𝗇 𝖼𝖺𝗇 𝗎𝗌𝖾 𝗍𝗁𝖾 𝖻𝗈𝗍𝗌
 ＼`•̀益•́´／<><><><><><><>＼`•̀益•́´／<><>><><><><(︶︹︺)<><><><><><><>
-handlerEvents.commandNotFound=⛔  "%1" 𝙘𝙤𝙢𝙢𝙖𝙣𝙙 𝙙𝙤𝙚𝙨 𝙣𝙤𝙩 𝙚𝙭𝙞𝙨𝙩 🟥
+handlerEvents.commandNotFound=🔐  "%1" 𝙘𝙤𝙢𝙢𝙖𝙣𝙙 𝙙𝙤𝙚𝙨 𝙣𝙤𝙩 𝙚𝙭𝙞𝙨𝙩 📌
 〉 [+help🔸] 𝙏𝙊 𝙎𝙀𝙀 𝘾𝙊𝙈𝙈𝘼𝙉𝘿'𝙎 𝘽𝙊𝙏 
 ________________________________
 🎖 Perfect 🎖 
